# cyberspace-cli

./: .gitignore  EXECUTIVE_SUMMARY_2026-04-17.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  PAYMENT_FLOW_GUIDE.md  README.md  SESSION_REPORT_2026-04-16_23-59.md  SESSION_REPORT_ZK_PHASE1_COMPLETE.md  SESSION_REPORT_ZK_STARK_2026-04-18.md  SESSION_SUMMARY_2026-04-16.md  SESSION_SUMMARY_2026-04-16_23-30.md  ZK_STARK_DESIGN.md  benchmark_merkle.py  find_strategic_keypair.py  find_strategic_keypair_v2.py  pyproject.toml  start.sh  test_payment_flow.py
docs/: CLOUD_COMPUTE_RESEARCH.md  CLOUD_COMPUTE_SUMMARY.md  EARTH_TRAVERSAL_PLAN.md  REFACTORING_ACHIEVEMENTS.md  REFACTORING_NOTES.md  REFACTORING_PROGRESS.md  REFACTORING_SESSION_2026-04-25.md  ZK-STARK-STATUS-2026-04-18.md  ZK_STARK_DESIGN.md  ZK_STARK_IMPLEMENTATION_PLAN.md  ZK_STARK_SESSION_SUMMARY.md  session-summary-zk-stark-2026-04-17.md
logs/: zk-stark-2026-04-17-session-9-15.md  zk-stark-2026-04-17-session2.md  zk-stark-2026-04-17.md  zk-stark-2026-04-18-baseline.md  zk-stark-2026-04-18-cron.md  zk-stark-2026-04-18-session-4-8.md  zk-stark-2026-04-18-session2.md  zk-stark-2026-04-18.md  zk-stark-session-report-2026-04-17.md
scripts/: benchmark_scale.py  benchmark_scale_v3.py  benchmark_zk_circuit.py  plot_terrain_k.py
src/cyberspace_core/zk_cantor/rust/: .gitignore  Cargo.toml
src/cyberspace_core/zk_cantor/rust/src/: lib.rs
tests/: bench_zk_single_pair.py  bench_zk_vs_standard.py  test_3d_cli.py  test_cloud_orchestration.py  test_config.py  test_encrypt_cli.py  test_enter_hyperspace.py  test_enter_hyperspace_cli.py  test_geoid.py  test_geoid_doctor.py  test_gps_reverse.py  test_hyperjump_cache.py  (+27 more)
(+62 files in other folders)
