[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "cyberspace-cli"
version = "0.0.1"
description = "CLI client for navigating Cyberspace (v2)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "arkinox" }]
dependencies = [
  "typer>=0.12",
  "coincurve>=20.0.0",
]

[project.scripts]
cyberspace = "cyberspace_cli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cyberspace_cli", "src/cyberspace_core"]
