[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "cyberspace-cli"
version = "0.0.1"
description = "CLI client for navigating Cyberspace (v2)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "arkinox" }]
dependencies = [
  "typer>=0.12",
  "coincurve>=20.0.0",
]

[project.optional-dependencies]
# Optional GUI visualizer for `cyberspace 3d`.
# Note: `tkinter` is a system package on many Linux distros (e.g. python3-tk).
visualizer = [
  "matplotlib>=3.8",
  "numpy>=1.26",
]

[project.scripts]
cyberspace = "cyberspace_cli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cyberspace_cli", "src/cyberspace_core"]
